# mcrm

./: captain-definition
mcrm/: Dockerfile  docker-compose.yml  pyproject.toml
mcrm/mcrm/: .gitignore
mcrm/mcrm/api/: models.py
mcrm/mcrm/api/model_details/: chat_conversation.py  chat_integration.py  chat_message.py  chat_multimedia.py  chat_type.py  client_user.py  email.py  email_message.py  profile.py
mcrm/mcrm/api/schema_details/: chat_type.py  operation_result.py
mcrm/mcrm/mcrm/: asgi.py  settings.py  settings_caprover.py  settings_dev.py  urls.py  wsgi.py
utils/: run.sh
